--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ VITE_API_URL=https://api.kitsunee.me/v2/hianime
 
 
 
-VITE_M3U8_PROXY_URL=<m3u8_proxy_server_name>/m3u8-proxy?url=https://nn-hazel.vercel.app/
+VITE_M3U8_PROXY_URL=https://cors-anywhere.herokuapp.com/https://api.kitsunee.me/v2/hianime/m3u8-proxy?url=
 
