--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-#Refer https://github.com/itzzzme/anime-api  to host your backend API
+
+# Backend API URL for fetching anime data
 VITE_API_URL=https://api.kitsunee.me/v2/hianime
 
+# Proxy Server URL to bypass CORS restrictions (Replace with your actual proxy URL)
+VITE_PROXY_URL=https://cors-anywhere.herokuapp.com/?
 
+# Proxy Server for M3U8 streaming (Replace with your actual M3U8 proxy URL)
+VITE_M3U8_PROXY_URL=https://m3u8-proxy.example.com/m3u8-proxy?url=
 
-VITE_M3U8_PROXY_URL=https://cors-anywhere.herokuapp.com/https://api.kitsunee.me/v2/hianime/m3u8-proxy?url=
 
